traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:22: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:25: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:28: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:31: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:34: error: Unmatched closing brace '}' ignored here
}
^